fixed scrollbar in firefox

--- a/src/app/components/user-interests/user-interests.component.scss
+++ b/src/app/components/user-interests/user-interests.component.scss
@@ -1,6 +1,10 @@
 .parent {
     background-color: var(--profile-summary-background-color);
     border-radius: 5px;
+    width: 100%;
+    max-width: 600px;
+    margin-left: auto;
+    margin-right: auto;
 
     .interests {
         padding: 15px;
